[package]
name = "pevm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Put this behind a feature flag if there are use cases & users
# that need more security guarantees even for internally hashing
# EVM memory locations (we do not persist these hashes).
ahash = "0.8.11"
alloy-primitives = { version = "0.7.6", features = ["asm-keccak"] }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "041c7c47b33907523cbe4023db03ae7bb57bf7bd" }
bitvec = "1.0.1"
crossbeam = "0.8.4"
dashmap = "6.0.0"

# Let's do our best to port needed REVM changes upstream
revm = { git = "https://github.com/risechain/revm", rev = "a16c02e74e9e172385f5a0e65f9ca4b7b45fd634", features = [
    "serde",
] }

# RPC Storage dependencies
# TODO: Put these behind an RPC flag to not pollute the core
# library with RPC network & transport dependencies, etc.
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "041c7c47b33907523cbe4023db03ae7bb57bf7bd" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "041c7c47b33907523cbe4023db03ae7bb57bf7bd" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "041c7c47b33907523cbe4023db03ae7bb57bf7bd" }
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }

[dev-dependencies]
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "041c7c47b33907523cbe4023db03ae7bb57bf7bd" }
alloy-rlp = "0.3.5"
alloy-trie = "0.4.1"
criterion = "0.5.1"
rand = "0.8.5"
rayon = "1.10.0"
revme = { git = "https://github.com/risechain/revm", rev = "a16c02e74e9e172385f5a0e65f9ca4b7b45fd634" }
serde = "1.0.203"
serde_json = "1.0.117"
snmalloc-rs = "0.3.6"
walkdir = "2.5.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"

[[bench]]
name = "mainnet"
harness = false

[[bench]]
name = "gigagas"
harness = false

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"
